development - initial tests applied, removed conflicting Validation particles