@@ -8,10 +8,13 @@ import com.ilgrig.tuum.mapper.TransactionMapper;
 import com.ilgrig.tuum.model.transaction.CreationTransactionDTO;
 import com.ilgrig.tuum.model.transaction.ResponseTransactionDTO;
 import com.ilgrig.tuum.model.transaction.TransactionDirection;
+import com.ilgrig.tuum.util.BalanceNotFoundException;
 import com.ilgrig.tuum.util.InsufficientFundsException;
 import com.ilgrig.tuum.util.MessagePublisher;
 import lombok.RequiredArgsConstructor;
 import org.apache.ibatis.session.RowBounds;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,28 +26,50 @@ import java.util.stream.Collectors;
 @Service
 public class TransactionServiceImpl implements TransactionService {
 
+    private static final Logger log = LoggerFactory.getLogger(TransactionServiceImpl.class);
     private final TransactionMapper transactionMapper;
     private final BalanceMapper balanceMapper;
     private final TransactionConverter transactionConverter;
     private final MessagePublisher messagePublisher;
+    private final AccountService accountService;
 
     @Transactional
     @Override
     public ResponseTransactionDTO createTransaction(CreationTransactionDTO dto) {
+        log.debug("Creating transaction for account ID {} and amount {}", dto.getAccountId(), dto.getAmount());
+
+        accountService.validateAccountExistence(dto.getAccountId());
+
         Balance balance = findBalanceByAccountIdAndCurrency(dto.getAccountId(), dto.getCurrency());
-        if (dto.getDirection() == TransactionDirection.OUT && balance.getAvailableAmount().compareTo(dto.getAmount()) < 0) {
-            throw new InsufficientFundsException("Insufficient funds for the transaction.");
-        }
+        validateFundsForTransaction(dto, balance);
+
         Transaction transaction = transactionConverter.toTransaction(dto);
         transaction.setBalanceId(balance.getId());
         transaction.setBalanceAfterTransaction(updateBalance(balance, dto.getAmount(), dto.getDirection()));
         transactionMapper.insert(transaction);
         messagePublisher.publishTransactionCreated(transaction);
+
+        log.debug("Transaction created successfully for account ID {}", dto.getAccountId());
         return transactionConverter.toResponseDTO(transaction);
     }
 
+    private void validateFundsForTransaction(CreationTransactionDTO dto, Balance balance) {
+        if (dto.getDirection() == TransactionDirection.OUT && balance.getAvailableAmount().compareTo(dto.getAmount()) < 0) {
+            log.error("Insufficient funds for transaction: Account ID {}, Requested {}, Available {}",
+                    dto.getAccountId(), dto.getAmount(), balance.getAvailableAmount());
+            throw new InsufficientFundsException("Insufficient funds for the transaction.");
+        }
+    }
+
+    private Balance findBalanceByAccountIdAndCurrency(Long accountId, String currency) {
+        return balanceMapper.findBalanceByAccountIdAndCurrency(accountId, currency)
+                .orElseThrow(() -> new BalanceNotFoundException("Balance not found for account ID " + accountId + " and currency " + currency));
+    }
+
     public BigDecimal updateBalance(Balance balance, BigDecimal amount, TransactionDirection direction) {
-        BigDecimal newAmount = direction == TransactionDirection.IN ? balance.getAvailableAmount().add(amount) : balance.getAvailableAmount().subtract(amount);
+        BigDecimal newAmount = direction == TransactionDirection.IN ?
+                balance.getAvailableAmount().add(amount) :
+                balance.getAvailableAmount().subtract(amount);
         balance.setAvailableAmount(newAmount);
         balanceMapper.update(balance);
         messagePublisher.publishBalanceUpdated(balance);
@@ -56,14 +81,6 @@ public class TransactionServiceImpl implements TransactionService {
         List<Transaction> transactions = transactionMapper.findAllByAccountId(accountId, rowBounds);
         return transactions.stream()
                 .map(transactionConverter::toResponseDTO)
-                .toList();
-    }
-
-    private Balance findBalanceByAccountIdAndCurrency(Long accountId, String currency) {
-        Balance balance = balanceMapper.findBalanceByAccountIdAndCurrency(accountId, currency);
-        if (balance == null) {
-            throw new InsufficientFundsException("Balance not found for account and currency.");
-        }
-        return balance;
+                .collect(Collectors.toList());
     }
 }
